Add and style ID for the second element
Second element uniquely styled according to
exercise instructions.

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: #ffaaaa;
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#second {
+    color: #1111ff;
+    font-size: 36px;
+}
