Add a unique class to each button
Classes styled according to exercise instructions.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,3 +1,12 @@
+.black {
+    background-color: rgb(0, 0, 0);
+    color: hsl(0, 0%, 100%);
+}
+
+.yellow {
+    background-color: #ffff00;
+}
+
 .button-style {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
