--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -7,7 +7,7 @@
     background-color: #ffff00;
 }
 
-.button-style {
+.black, .yellow {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
